<resources>
    <string name="app_name">Servisim</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="application_logo">Application Logo</string>
    <string name="servisinizin_gelmesine">Servisinizin gelmesine</string>
    <string name="var">var</string>
    <string name="back">Back</string>
    <string name="ad_soyad">Ad Soyad</string>
    <string name="add_kid">Add Kid</string>
    <string name="children">Children</string>
    <string name="gelmeyece_im">Gelmeyeceğim</string>
    <string name="_5_dk_gecikece_im">5 dk gecikeceğim</string>
    <string name="remaining_mins">%d dk</string>
</resources>
